feat:add function for upload anim file & add api to notfiy clientA editCompleted
